--- a/inicio.css
+++ b/inicio.css
@@ -23,10 +23,10 @@
     background-color: rgba(0, 0, 0, 0.4);
     color: #4ab3d2;
     text-decoration: none;
-    display: flex;
-    justify-content: space-between;
+    justify-content: center;
     border-radius: 10px;
-    padding: 0px 20px;
+    padding: 10px 20px;
+
 }
 .paginas {
     background-color: #4ab3d2;
@@ -34,7 +34,7 @@
     border-radius: 10px;
     list-style: none;
     padding: 10px;
-
+    text-align: center;
 
 }
 
@@ -54,12 +54,20 @@
 
 
 .itens {
-
-    display: flex;
-    max-height: 250px;
-
+    padding: 0px;
 }
 /* ============================== CABECALHO ==================================================== */
 
 
 
+
+
+
+
+.conteudo {
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
